--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -844,6 +844,10 @@ body > div.container-max-width > div.dialog-off-canvas-main-canvas > div > div >
   font-weight: normal;
 }
 
+.file {
+  font-size: 100%;
+}
+
 @media (max-width: 767.98px) {
   .region-content table {
     display: block;
@@ -889,6 +893,19 @@ li.node-readmore,
 .field--name-field-itn-publication-date,
 .field--name-field-itn-publication-source,
 .field--name-field-itn-reporter,
+.field--name-field-job-addl-requirements,
+.field--name-field-job-category,
+.field--name-field-job-close-date,
+.field--name-field-job-description-file,
+.field--name-field-job-min-qualifications,
+.field--name-field-job-open-date,
+.field--name-field-job-position-number,
+.field--name-field-job-position-summary,
+.field--name-field-job-pref-qualifications,
+.field--name-field-job-salary,
+.field--name-field-job-statement,
+.field--name-field-job-application-process,
+.field--name-field-job-work-schedule,
 .field--name-field-news-post-date,
 .feeds_feed__content,
 .region-content form,
@@ -1075,13 +1092,31 @@ li.node-readmore,
 .field--name-field-itn-article-url,
 .field--name-field-itn-publication-date,
 .field--name-field-itn-publication-source,
-.field--name-field-itn-reporter {
+.field--name-field-itn-reporter,
+.field--name-field-job-addl-requirements,
+.field--name-field-job-category,
+.field--name-field-job-close-date,
+.field--name-field-job-description-file,
+.field--name-field-job-min-qualifications,
+.field--name-field-job-open-date,
+.field--name-field-job-position-number,
+.field--name-field-job-position-summary,
+.field--name-field-job-pref-qualifications,
+.field--name-field-job-salary,
+.field--name-field-job-statement,
+.field--name-field-job-application-process,
+.field--name-field-job-work-schedule {
   color: $dark-gray;
   margin-bottom: 1em;
 }
 
 .field--name-field-event-contact,
-.field--name-field-event-website {
+.field--name-field-event-website,
+.field--name-field-job-addl-requirements,
+.field--name-field-job-min-qualifications,
+.field--name-field-job-position-summary,
+.field--name-field-job-pref-qualifications,
+.field--name-field-job-statement {
   p {
   margin-left: 0;
   }
